# sqlfluff-plugin-tablename

./: LICENSE  README.md  hello.py  pyproject.toml
src/sqlfluff_plugin_tablename/: __init__.py  plugin_default_config.cfg  rules.py
test/rules/: rule_test_cases_test.py
test/rules/test_cases/: Rule_TableName_L001.yml
