[project]
name = "sqlfluff-plugin-tablename"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlfluff>=3.3.0",
]

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[project.entry-points.sqlfluff]
sqlfluff_tablename = "sqlfluff_plugin_tablename"
